--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.2",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
