--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.3",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
     "pino": "^8.18.0",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "react-redux": "^9.1.0"
   }
 }
